--- a/specification.yaml
+++ b/specification.yaml
@@ -41,6 +41,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/phones'
+        404:
+          description: phone Not found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: NOT FOUND
 
 
   /phones/{id}/characteristics:
